...
    }

    // MARK: - Lifecycle

    override func viewDidLoad() {
        super.viewDidLoad()
        webView?.accessibilityIdentifier = "UnsplashWebView" // для тестов

        webView?.navigationDelegate = self

        setupProgressObservation()

        presenter.viewDidLoad()
...
